update for harvest tournament